solve an issue with z-index in nav bar

--- a/src/components/Header/styles.scss
+++ b/src/components/Header/styles.scss
@@ -10,7 +10,6 @@
   justify-content: space-between;
   position: sticky;
   width: 100%;
-  z-index: 2;
 
   .icons-header {
     margin: 0 16px;
@@ -33,21 +32,22 @@
 }
 
 nav {
+  grid-area: 1 / 1 / 2 / 2;
+  .categories {
+  }
   background-attachment: fixed;
   background-image: linear-gradient(180deg, $secondary-color 0%, $dark-violet 100%);
   background-repeat: no-repeat;
-  height: 100%;
-  position: fixed;
-  top: 48px;
-  width: 100%;
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: 70% 30%;
-  .categories {
-    grid-area: 1 / 1 / 2 / 2;
-  }
+  height: 100%;
   left: -600px;
+  position: fixed;
+  top: 48px;
   transition: left 0.7s;
+  width: 100%;
+  z-index: 10;
 
   .options {
     grid-area: 2 / 1 / 3 / 2;
